cmake_minimum_required(VERSION 3.21)
project(a8_9_914_Claudia_Moisiuc)

set(CMAKE_CXX_STANDARD 14)

include_directories(scr/source)

add_executable(a8_9_914_Claudia_Moisiuc
        scr/source/tutorial.cpp
        scr/header/tutorial.h scr/source/main.cpp scr/source/duration.cpp scr/header/duration.h scr/source/repository.cpp scr/header/repository.h scr/source/service.cpp scr/header/service.h scr/source/ui.cpp scr/header/ui.h scr/source/validators.cpp scr/header/validators.h scr/source/duration.cpp scr/header/duration.h scr/source/tutorial.cpp scr/header/tutorial.h scr/source/repository.cpp scr/header/repository.h scr/source/main.cpp scr/source/validators.cpp scr/header/validators.h scr/source/service.cpp scr/header/service.h scr/source/ui.cpp scr/header/ui.h)
